<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_device_address"
                  android:textSize="15sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_state"
                  android:textSize="15sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/data_value"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:editable="false"
            android:ems="10"
            android:gravity="top|left"
            android:textSize="18sp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="查看特徵值"
            android:textSize="12sp" />
    </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:text="Select 2.4GHz WiFi and input password" />
        
        </LinearLayout>

<Spinner
    android:id="@+id/my_spinner1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >
<EditText
    android:id="@+id/editText1"
    android:layout_width="138dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:drawableBottom="@android:color/black"
    android:ems="10"
    android:hint="password"
    android:inputType="none"
    android:password="true" />

<EditText
    android:id="@+id/editText0"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:drawableBottom="@android:color/black"
    android:ems="10"
    android:hint="position"
    android:inputType="none"
    android:password="false" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/editText2"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_weight="0.55"
        android:drawableBottom="@android:color/black"
        android:ems="10"
        android:inputType="none"
        android:password="false"
        android:text="latitude" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_weight="0.41"
        android:drawableBottom="@android:color/black"
        android:ems="10"
        android:inputType="none"
        android:password="false"
        android:text="longitude" />

    <TextView
        android:id="@+id/setposition"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="setposition" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/set"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:text="set" />

</LinearLayout>

</LinearLayout>
